# rust-sdk

./: .gitignore  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONSOLIDATION_PLAN.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LLM.md  PUBLISHING.md  QUICK_PUBLISH.md  README.md  SECURITY.md  SETUP_PUBLISHING.md  crates.js  deny.toml  help.html  index.html  settings.html  src-files.js
.cargo/: audit.toml
.github/: cliff.toml  dependabot.yml  labeler.yml  pull_request_template.md
crates/hanzo-agent/: Cargo.toml  IMPLEMENTATION.md  README.md
crates/hanzo-agent-marketplace/: Cargo.toml  README.md
crates/hanzo-agent-marketplace/examples/: advanced_marketplace.rs  basic_usage.rs
crates/hanzo-agent-marketplace/src/: error.rs  lib.rs  types.rs
crates/hanzo-agent-proxy/: Cargo.toml  README.md
crates/hanzo-agent-proxy/src/: main.rs
crates/hanzo-agent/examples/: basic_agent.rs
crates/hanzo-agent/src/: agent.rs  context.rs  errors.rs  lib.rs  result.rs  runner.rs  tool.rs  types.rs
crates/hanzo-agents/: Cargo.toml
crates/hanzo-agents/src/: agents.rs  lib.rs  prompts.rs  registry.rs  tools.rs  traits.rs
crates/hanzo-agents/src/agents/: architect.rs  cto.rs  explorer.rs  planner.rs  reviewer.rs  scientist.rs
crates/hanzo-config/: Cargo.toml
crates/hanzo-config/src/: lib.rs
crates/hanzo-crypto/: Cargo.toml  README.md
crates/hanzo-crypto-identities/: Cargo.toml
crates/hanzo-crypto-identities/src/: hanzo_registry.rs
crates/hanzo-crypto/src/: attestation.rs  config.rs  errors.rs  hybrid.rs  kdf.rs  kem.rs  lib.rs  privacy_tiers.rs  signature.rs  wire_protocol.rs
crates/hanzo-did/: Cargo.toml
crates/hanzo-did/examples/: hanzo_did_demo.rs
crates/hanzo-did/src/: did.rs  document.rs  error.rs  lib.rs  proof.rs  resolver.rs  service.rs  verification_method.rs
crates/hanzo-extract/: Cargo.toml  README.md
crates/hanzo-extract/src/: config.rs  conversations.rs  error.rs  lib.rs  pdf.rs  result.rs  sanitize.rs  web.rs
crates/hanzo-guard/: Cargo.toml  README.md
crates/hanzo-guard/src/: audit.rs  config.rs  content.rs  error.rs  guard.rs  injection.rs  lib.rs  pii.rs  rate_limit.rs  types.rs
crates/hanzo-hmm/: Cargo.toml  README.md
crates/hanzo-hmm/src/: lib.rs
crates/hanzo-kbs/: Cargo.toml
crates/hanzo-llm/: Cargo.toml
crates/hanzo-llm/examples/: regime_demo.rs
crates/hanzo-llm/src/: adapter.rs  bitdelta.rs  free_energy.rs  hamiltonian.rs  lib.rs  regime.rs  routing.rs  storage.rs
crates/hanzo-mcp/: Cargo.toml  README.md
crates/hanzo-mcp-client/: Cargo.toml  README.md
crates/hanzo-mcp-client/src/: client.rs  command.rs  error.rs  lib.rs  mcp_methods.rs  utils.rs
crates/hanzo-mcp-core/: Cargo.toml  README.md
crates/hanzo-mcp-core/src/: config.rs  error.rs  lib.rs  traits.rs  types.rs
crates/hanzo-mcp-server/: Cargo.toml  README.md  test_personalities.rs
crates/hanzo-mcp-server/src/: config.rs  lib.rs  main.rs  protocol.rs  server.rs
crates/hanzo-mcp-server/src/search/: ast_search.rs  mod.rs  search.rs  symbol_search.rs  unified_search.rs  vector_store.rs
crates/hanzo-mcp-server/src/tools/: mod.rs  mode_tool.rs  personality.rs  personality_basic.rs
crates/hanzo-mcp/src/: lib.rs
crates/hanzo-message-primitives/: Cargo.toml
crates/hanzo-message-primitives/src/: lib.rs  main.rs
crates/hanzo-message-primitives/src/hanzo_message/: hanzo_message_encryption.rs  hanzo_message_error.rs  hanzo_message_extension.rs  hanzo_message_schemas.rs  hanzo_message_signing.rs  mod.rs
crates/hanzo-message-primitives/src/hanzo_utils/: encryption.rs  hanzo_message_builder.rs  hanzo_message_builder_bundled.rs  hanzo_message_builder_bundled_tools.rs  hanzo_message_to_prompt.rs  hanzo_path.rs  hanzo_time.rs  job_scope.rs  mod.rs  signatures.rs  test_utils.rs
crates/hanzo-message-primitives/src/schemas/: hanzo_name.rs  hanzo_tool_offering.rs  hanzo_tools.rs  identity.rs  inbox_name.rs  inbox_permission.rs  invoices.rs  job_config.rs  llm_message.rs  mcp_server.rs  mod.rs  prompts.rs  smart_inbox.rs  subprompts.rs  tool_router_key.rs  ws_types.rs  x402_types.rs
crates/hanzo-message-primitives/src/schemas/llm_providers/: agent.rs  mod.rs  serialized_llm_provider.rs
crates/hanzo-message-primitives/tests/: hanzo_encryption_interop.rs  hanzo_message_builder_tests.rs  hanzo_message_tests.rs  hanzo_name_tests.rs
crates/hanzo-model-discovery/: Cargo.toml
crates/hanzo-pqc/: Cargo.toml
crates/hanzo-pqc/benches/: pqc_benchmarks.rs
crates/hanzo-pqc/examples/: basic_usage.rs
crates/hanzo-pqc/src/: attestation.rs  config.rs  hybrid.rs  kdf.rs  kem.rs  lib.rs  privacy_tiers.rs  signature.rs  wire_protocol.rs
crates/hanzo-pqc/tests/: integration_tests.rs
hanzo_agent/: all.html  index.html  sidebar-items.js
hanzo_agents/: all.html  index.html  sidebar-items.js
hanzo_config/: all.html  fn.get_dir_size_gb.html  fn.init_hanzo_environment.html  index.html  sidebar-items.js  struct.GlobalConfig.html  struct.HanzoConfig.html  struct.StorageStats.html
hanzo_crypto/: all.html  fn.init.html  index.html
hanzo_did/: all.html  enum.JsonValue.html  index.html  sidebar-items.js
hanzo_mcp/: all.html  enum.ContentBlock.html  enum.McpError.html  enum.McpServerSource.html  enum.McpTransport.html  index.html  sidebar-items.js  struct.ClientInfo.html  struct.LoggingCapability.html  struct.McpClient.html  struct.McpClientConfig.html  struct.McpResourceInfo.html  struct.McpServerConfig.html  struct.McpToolInfo.html  struct.PromptArgument.html  struct.PromptDefinition.html  struct.PromptsCapability.html  struct.ResourceDefinition.html  struct.ResourcesCapability.html  struct.ServerCapabilities.html  struct.ServerInfo.html  struct.ToolDefinition.html  struct.ToolResult.html  struct.ToolsCapability.html  trait.McpServer.html  trait.McpTool.html  trait.ToolRegistry.html  type.McpResult.html
hanzo_mcp_client/: all.html  enum.McpServerSource.html  index.html  sidebar-items.js  struct.CalledFunction.html  struct.McpClient.html  struct.McpClientConfig.html  struct.McpResourceInfo.html  struct.McpServerConfig.html  struct.McpToolInfo.html  struct.ResourceDefinition.html  (+4 more)
(+1465 files in other folders)
