[workspace]
resolver = "2"
members = [
    "crates/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI <dev@hanzo.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanzoai/rust-sdk"
homepage = "https://hanzo.ai"
documentation = "https://docs.rs/hanzo-*"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Crypto
blake3 = "1.8"
chacha20poly1305 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"
hpke = "0.12"
sha2 = "0.10"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
log = "0.4"
tracing = "0.1"
dashmap = "5.5"
rand = "0.8"

# HTTP/API
warp = "0.3"
reqwest = { version = "0.11", features = ["json"] }
utoipa = "4.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# Additional utilities
dirs = "5.0"
tempfile = "3.19"
lazy_static = "1.5"
bincode = "2.0"
futures = "0.3.30"
env_logger = "0.11"
os_path = "0.8"
once_cell = "1.21"
regex = "1"
csv = "1.1"

# Dev dependencies
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"

# Internal workspace crates
hanzo_message_primitives = { path = "./crates/hanzo-message-primitives" }
hanzo_config = { path = "./crates/hanzo-config" }
hanzo_pqc = { path = "./crates/hanzo-pqc" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true