[workspace]
resolver = "2"
members = [
    # ===========================================
    # CORE SDK - Shared across dev, node, desktop
    # ===========================================

    # Core - Cryptography & Security
    "crates/hanzo-pqc",              # Post-quantum cryptography
    "crates/hanzo-crypto",           # General crypto primitives
    # "crates/hanzo-crypto-identities", # DID-based identities - needs hanzo_non_rust_code

    # Core - Identity & Messages
    "crates/hanzo-did",              # W3C DID support
    "crates/hanzo-message-primitives", # Core message schemas

    # Core - Configuration
    "crates/hanzo-config",           # Configuration management

    # AI/ML - Agents (SHARED FOR DEV/NODE INTEGRATION)
    "crates/hanzo-agent",            # Agent framework - key for tool calling
    "crates/hanzo-mcp-core",         # MCP core traits and types
    "crates/hanzo-mcp-client",       # MCP client (connects to servers)
    "crates/hanzo-mcp-server",       # MCP server (exposes tools)
    "crates/hanzo-mcp",              # Unified MCP re-export crate
    "crates/hanzo-agents",           # Specialized agents (architect, cto, reviewer, etc.)

    # ===========================================
    # DISABLED - Need refactoring for clean separation
    # ===========================================
    # "crates/hanzo-messages",        # has deep dependencies
    # "crates/hanzo-embedding",       # has blocking reqwest issues
    # "crates/hanzo-llm",             # depends on sqlite
    # "crates/hanzo-hmm",             # ML-specific
    # "crates/hanzo-kbs",             # depends on identity chain
    # "crates/hanzo-identity",        # depends on runtime
    # "crates/hanzo-libp2p",          # depends on identity
    # "crates/hanzo-libp2p-relayer",
    # "crates/hanzo-compute",
    # "crates/hanzo-database",
    # "crates/hanzo-ai-format",
    # "crates/hanzo-wasm",
    # "crates/hanzo-tools-runner",
    # "crates/hanzo-mining",
    # "crates/hanzo-agent-marketplace",
    # "crates/hanzo-baml",
    # "crates/hanzo-db",
    # "crates/hanzo-simulation",
    # "crates/hanzo-sqlite",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI <dev@hanzo.ai>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/hanzoai/rust-sdk"
homepage = "https://hanzo.ai"
documentation = "https://docs.rs/hanzo-*"
rust-version = "1.75"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
toml = "0.8"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Crypto - Core
blake3 = "1.8"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = "2.1"
hpke = "0.12"
sha2 = "0.10"
sha3 = "0.10"
argon2 = "0.5"
hkdf = "0.12"

# PQC - Post-Quantum Cryptography
oqs = "0.11"
saorsa-pqc = "0.3"

# Networking - libp2p
libp2p = { version = "0.55", features = ["tokio", "noise", "yamux", "tcp", "dns", "identify", "kad", "relay", "dcutr", "ping", "gossipsub", "request-response", "macros"] }

# MCP - Model Context Protocol
rmcp = { version = "0.8", features = ["client", "server", "macros", "transport-child-process", "transport-streamable-http-client-reqwest", "transport-sse-client-reqwest"] }

# Math and ML
nalgebra = "0.33"
ndarray = "0.16"
statrs = "0.17"
rand = "0.8"
rand_distr = "0.4"
num-traits = "0.2"

# ML Frameworks
candle-core = "0.7"
candle-nn = "0.7"
ort = "2.0"

# Math utilities
ode_solvers = "0.3"
bitvec = { version = "1.0", features = ["serde"] }
half = { version = "2.4", features = ["serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17", features = ["v4", "serde"] }
base64 = "0.22"
hex = "0.4"
log = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
once_cell = "1.21"
lazy_static = "1.5"
regex = "1"
walkdir = "2"
dirs = "5.0"
tempfile = "3.19"
home = "0.5"
os_path = "0.8"
csv = "1.3"
keyphrases = "0.3"
strip-ansi-escapes = "0.2"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
warp = "0.3"
r2d2 = "0.8"
r2d2_sqlite = "0.25"

# HTTP/API
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-gzip"] }
utoipa = "4.2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "macros", "json"] }
lancedb = "0.12"
duckdb = { version = "1.0", features = ["bundled"] }
deadpool = "0.12"
deadpool-postgres = "0.14"

# WASM Runtime
wasmtime = "25"

# Container orchestration (optional)
bollard = "0.17"

# DNS
trust-dns-resolver = "0.23"

# Compression
flate2 = "1"
tar = "0.4"
zip = "2"

# Dev dependencies
criterion = "0.5"
proptest = "1.0"
tokio-test = "0.4"

# ============================================
# Internal workspace crates (hyphenated only)
# Cargo normalizes hyphens to underscores automatically
# ============================================

# Core - Crypto & Security
hanzo-pqc = { path = "./crates/hanzo-pqc" }
hanzo-crypto = { path = "./crates/hanzo-crypto" }
hanzo-crypto-identities = { path = "./crates/hanzo-crypto-identities" }
hanzo-kbs = { path = "./crates/hanzo-kbs" }

# Core - Identity & Messages
hanzo-did = { path = "./crates/hanzo-did" }
hanzo-identity = { path = "./crates/hanzo-identity" }
hanzo-messages = { path = "./crates/hanzo-messages" }
hanzo-message-primitives = { path = "./crates/hanzo-message-primitives" }

# Network
hanzo-libp2p = { path = "./crates/hanzo-libp2p" }
hanzo-libp2p-relayer = { path = "./crates/hanzo-libp2p-relayer" }
hanzo-compute = { path = "./crates/hanzo-compute" }

# MCP - Model Context Protocol (unified)
hanzo-mcp-core = { version = "0.1.0", path = "./crates/hanzo-mcp-core" }
hanzo-mcp-client = { version = "0.1.0", path = "./crates/hanzo-mcp-client" }
hanzo-mcp-server = { version = "0.1.0", path = "./crates/hanzo-mcp-server" }
hanzo-mcp = { version = "0.1.0", path = "./crates/hanzo-mcp" }

# Data
hanzo-config = { path = "./crates/hanzo-config" }
hanzo-database = { path = "./crates/hanzo-database" }
hanzo-ai-format = { path = "./crates/hanzo-ai-format" }
hanzo-embedding = { path = "./crates/hanzo-embedding" }
hanzo-sqlite = { path = "./crates/hanzo-sqlite" }

# AI/ML
hanzo-agent = { path = "./crates/hanzo-agent" }
hanzo-agents = { path = "./crates/hanzo-agents" }
hanzo-llm = { path = "./crates/hanzo-llm" }
hanzo-hmm = { path = "./crates/hanzo-hmm" }
hanzo-model-discovery = { path = "./crates/hanzo-model-discovery" }

# Runtime
hanzo-wasm = { path = "./crates/hanzo-wasm" }
hanzo-tools-runner = { path = "./crates/hanzo-tools-runner" }

# Consensus
hanzo-mining = { path = "./crates/hanzo-mining" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[profile.dev]
opt-level = 0
debug = true

[profile.dev-fast]
inherits = "dev"
opt-level = 1
debug = 1
