[package]
name = "hanzo-agent-proxy"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true
description = "Multi-backend OpenAI-compatible API proxy for AI agents and CLIs"
keywords = ["ai", "llm", "proxy", "openai", "anthropic", "agents"]
categories = ["api-bindings", "asynchronous", "network-programming"]

[[bin]]
name = "hanzo-proxy"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { workspace = true, features = ["full", "process"] }

# HTTP server
axum = { workspace = true, features = ["json"] }
tower = { workspace = true, features = ["util"] }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# CLI and environment
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client (for HTTP passthrough backends)
reqwest = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
