[package]
name = "hanzo-crypto"
version = "0.1.0"
edition = "2021"
authors = ["Hanzo AI <dev@hanzo.ai>"]
license = "MIT OR Apache-2.0"
description = "Pure-Rust cryptography library for Hanzo ecosystem including post-quantum algorithms"
repository = "https://github.com/hanzoai/rust-sdk"
homepage = "https://hanzo.ai"
documentation = "https://docs.rs/hanzo-crypto"
readme = "README.md"
keywords = ["cryptography", "post-quantum", "ml-kem", "ml-dsa", "pure-rust"]
categories = ["cryptography", "no-std"]

[features]
default = ["ml-kem", "ml-dsa", "hybrid"]
ml-kem = []
ml-dsa = []
slh-dsa = []
hybrid = ["x25519-dalek"]
fips-mode = []
gpu-cc = []
tee-io = []

[dependencies]
# Core PQC implementation - using pure-Rust saorsa-pqc
saorsa-pqc = "0.3"

# Pure-Rust crypto primitives
x25519-dalek = { version = "2.0", optional = true, features = ["static_secrets"] }
ed25519-dalek = "2.1"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
argon2 = "0.5"

# KDF and utilities
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"
blake3 = "1.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
base64 = "0.22"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async support
async-trait = "0.1"
tokio = { version = "1.45", features = ["full"] }

# Random number generation (FIPS compliant)
rand = "0.8"
getrandom = { version = "0.2", features = ["std"] }

# Attestation support
hex = "0.4"
zeroize = { version = "1.8", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.7"
proptest = "1.0"