[package]
name = "hanzo-kbs"
description = "Hanzo AI - Kbs Library"
license = "MIT"
version = "1.1.10"
edition = "2021"
authors = ["Hanzo AI <dev@hanzo.ai>"]

# Make this a standalone crate (not part of parent workspace)
# This crate is disabled in CI due to external dependencies
[workspace]

[features]
default = ["pqc"]
pqc = ["hanzo-pqc"]
# CI-specific feature to enable integration tests
integration-tests = ["pqc"]

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.45", features = ["full"] }
log = "0.4"
dashmap = "6"
rand = "0.9"

# Cryptography
hpke = "0.12"
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core", "serde"] }
blake3 = "1.8"
hex = "0.4"

# For attestation
base64 = "0.22"
bincode = "1.3"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Hanzo dependencies
hanzo-messages = { version = "1.1.11", path = "../hanzo-messages" }
hanzo-pqc = { version = "0.1.0", path = "../hanzo-pqc", optional = true }

# API dependencies
warp = "0.3"

[dev-dependencies]
tokio-test = "0.4"