[package]
name = "hanzo-mcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Hanzo MCP Server - Rust implementation with search, tools, and code analysis"
readme = "README.md"
keywords = ["mcp", "hanzo", "ai", "tools", "llm"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Internal crates
hanzo-mcp-core = { workspace = true }

# Core
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
toml = { workspace = true }

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-derive = "18.0"
jsonrpc-http-server = "18.0"

# Logging
log = { workspace = true }
env_logger = { workspace = true }
tracing = { workspace = true }

# Utils
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# Parallel processing
rayon = "1.8"

# Glob patterns
glob = "0.3"

# Search and AST
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"
tree-sitter-java = "0.20"
tree-sitter-cpp = "0.20"
tree-sitter-c = "0.20"

# Vector store (optional)
vectordb = { version = "0.1", optional = true }

[features]
default = []
vector-store = ["dep:vectordb"]

# Platform specific
[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.25"
objc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11 = "2.21"

[[bin]]
name = "hanzo-mcp-server"
path = "src/main.rs"

[lib]
name = "hanzo_mcp_server"
path = "src/lib.rs"
