[package]
name = "hanzo-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Model Context Protocol (MCP) for Hanzo - client, server, and core types"
readme = "README.md"
keywords = ["mcp", "hanzo", "ai", "tools", "llm"]
categories = ["api-bindings", "development-tools"]

[dependencies]
# Re-export all MCP crates
hanzo-mcp-core = { workspace = true }
hanzo-mcp-client = { workspace = true }

[features]
default = ["client"]
client = []
server = ["dep:hanzo-mcp-server"]
full = ["client", "server"]

[dependencies.hanzo-mcp-server]
workspace = true
optional = true
