[package]
name = "hanzo-message-primitives"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core message schemas and primitives for Hanzo node communication"

[dependencies]
serde_json = { workspace = true }
chacha20poly1305 = "0.7.1"
x25519-dalek = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
regex = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
aes-gcm = "0.10.3"
blake3 = { workspace = true }
rust_decimal = "1.17.0"
base64 = { workspace = true }
utoipa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
# Only use sync features for WASM compatibility (don't need full tokio runtime)
tokio = { version = "1.45", default-features = false, features = ["sync"] }
async-trait = { workspace = true }

tracing = { version = "0.1.40", optional = true }

tracing-subscriber = { version = "0.3", optional = true }

# os_path doesn't support WASM, so it's only available on non-WASM targets
# See [target.'cfg(not(target_arch = "wasm32"))'.dependencies] below

[lib]
crate-type = ["rlib"]

[dev-dependencies]
serial_test = "3.2"
tempfile = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
os_path = { workspace = true }

# Enable getrandom js feature for WASM builds
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[[test]]
name = "hanzo_message_tests"
path = "tests/hanzo_message_tests.rs"

[[test]]
name = "hanzo_name_tests"
path = "tests/hanzo_name_tests.rs"

[lints]
workspace = true
